bug #28819: Time line and Schedule not work well in detail of shift trade request.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -288,7 +288,6 @@
 
 .shift-trade-swap-detail-timeline 
 {
-	margin-left: 10px;
 	height: 46px;
 	position: absolute;
 	/*hack to make LTR work - remove when were using "true" LTR in requests"". See bug 22898*/
